--- a/Views/Admin/CreateUser.cshtml
+++ b/Views/Admin/CreateUser.cshtml
@@ -1,11 +1,12 @@
 ﻿@model CreateUserViewModel
+
 @{
-    ViewData["Title"] = "Please register your account";
+    ViewData["Title"] = "Create user";
 }
 
 <section class="registerform">
     <div class="container">
-        <h1>Please register your account</h1>
+        <h1>Create user</h1>
 
         <form method="post" enctype="multipart/form-data" novalidate>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
