--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -2,6 +2,10 @@
 
 @model List<UserViewModel>
 
+@{
+    ViewData["Title"] = "Admin";
+}
+
 <section class="admin-section">
     <div class="container">
         <table>
