--- a/Views/Register/Index.cshtml
+++ b/Views/Register/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserSignUpViewModel
 @{
-    ViewData["Title"] = "Please register your account";
+    ViewData["Title"] = "Register your account";
 }
 
 <section class="registerform">
