--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model UserViewModel
 
+@{
+    ViewData["Title"] = "Your profile";
+}
+
 <section class="profile-section">
     <div class="container">
         <div class="profile-img">
