--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -832,7 +832,18 @@ footer .copyright {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
   }
+}
+.collection-section .collection-cards .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+.collection-section .collection-cards .col-12 {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .sales-section {
@@ -1006,6 +1017,39 @@ footer .copyright {
   .topsellpost-section .topsell-posts .container .card-description .comments {
     text-align: left;
   }
+}
+
+.all-products {
+  margin-top: 3.125rem;
+  background-color: #FFFFFF;
+}
+.all-products .new-product, .all-products a {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.188rem;
+  color: #292929;
+  text-decoration: none;
+  font-weight: 500;
+}
+.all-products .new-product i, .all-products a i {
+  margin-right: 0.5rem;
+}
+.all-products .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.all-products .container .card {
+  border: none;
+  padding: 20px;
+  background-color: #fff;
+  flex-basis: 25%;
+  box-sizing: border-box;
+}
+.all-products .container .card-img-top {
+  width: 100%;
+  height: auto;
+  border-radius: 0;
 }
 
 .product-details-section {
@@ -1386,35 +1430,4 @@ footer .copyright {
 }
 .admin-section .container .new-user i {
   margin-right: 0.5rem;
-}
-
-.all-products {
-  margin-top: 3.125rem;
-  background-color: #FFFFFF;
-}
-.all-products .new-product, .all-products a {
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-  font-size: 1.188rem;
-  color: #292929;
-  text-decoration: none;
-  font-weight: 500;
-}
-.all-products .new-product i, .all-products a i {
-  margin-right: 0.5rem;
-}
-.all-products .container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.all-products .card {
-  border: none;
-  padding: 20px;
-  background-color: #fff;
-}
-.all-products .card-img-top {
-  width: auto;
-  height: auto;
-  border-radius: 0;
 }
