--- a/wwwroot/scss/sections/_collection.scss
+++ b/wwwroot/scss/sections/_collection.scss
@@ -49,6 +49,19 @@
             display: flex;
             flex-direction: row;
             justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .row {
+            display: flex;
+            flex-wrap: wrap; 
+            margin-left: -10px; 
+            margin-right: -10px; 
+        }
+
+        .col-12 {
+            padding-left: 10px; 
+            padding-right: 10px;
         }
     }
 }
