Code - Done. Lets go on vacation - Have a nice summer!

--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -27,7 +27,7 @@
                     @foreach (var tag in Model.Tags)
                     {
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="tag-@tag" name="tags" value="@tag">
+                            <input class="form-check-input" type="checkbox" id="tag-@tag" name="SelectedTags" value="@tag" @(Model.SelectedTags.Contains(tag) ? "checked" : "")>
                             <label class="form-check-label" for="tag-@tag">
                                 @tag
                             </label>
